<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="banner"
            type="com.moizaandroid.moiza.ui.component.home.BannerFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f8fa"
        tools:context=".ui.component.home.BannerFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/board_top"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="18.66dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/moiza_logo" />

            <ImageView
                android:layout_width="51.87dp"
                android:layout_height="14.72dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/name"
                android:src="@drawable/moiza" />

            <ImageView
                android:id="@+id/search_tab_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="260dp"
                android:contentDescription="@string/search"
                android:src="@drawable/search_icon" />

        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/school_banner"
            android:layout_width="0dp"
            android:layout_height="214dp"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/guideline3" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/dot_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/school_banner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/rotobo_bold"
            android:text="@string/popular_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="@id/guideline1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_content_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/guideline4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
