<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="post"
            type="com.moizaandroid.moiza.ui.component.post.PostFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="25dp"
                android:layout_height="18.66dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:src="@drawable/moiza_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="51.87dp"
                android:layout_height="14.72dp"
                android:layout_gravity="center"
                android:layout_marginStart="8.7dp"
                android:src="@drawable/moiza"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_marginStart="15.5dp"
                android:background="@drawable/categoty_box"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="3.5dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/category_down" />

            </LinearLayout>

            <ImageView
                android:layout_width="20.4dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="20.6dp"
                android:src="@drawable/search_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54.5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/post_category">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:layout_marginBottom="5.5dp"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/moiza_blue"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/question"
                    android:layout_marginBottom="5.5dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal"
                    android:layout_marginBottom="5.5dp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/today_rv"
            android:layout_width="match_parent"
            android:layout_height="221.5dp"
            android:paddingTop="22.5dp"
            android:paddingStart="21dp" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/all_post"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="21dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="21dp"
                android:orientation="horizontal"
                android:background="@drawable/post_sort_btn">
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="6dp"
                    android:src="@drawable/post_sort_img"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/sort"
                    android:textColor="@color/post_sort_color"
                    android:textSize="12sp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="center"
                    android:textStyle="normal" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="29dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_post_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="21dp"
                android:paddingEnd="21dp" />

            <LinearLayout
                android:id="@+id/post_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/post_btn"
                android:gravity="center"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="56dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_width="23.3dp"
                    android:layout_height="25.8dp"
                    android:src="@drawable/post_logo" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>